--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-<div class="w3-section msig-margin-side msig-card-blue">
+<div class="w3-section msig-card msig-margin-side">
+    <div class="msig-padding">
     <h2>Bouton Bleu</h2>
     <a href="#"><button class="msig-button msig-button-blue msig-button-blue-hover">Bouton Bleu</button></a>
     <p><strong>Description :</strong> Utilisez la balise <code>&lt;button&gt;</code> avec les classes <code>msig-button</code> et <code>msig-button-blue</code> pour créer un bouton bleu. L'effet de survol donnera une couleur différente.</p>
@@ -26,7 +27,7 @@
     <h2>Bouton Transparent</h2>
     <a href="#" class="msig-button-member-top">Bouton Transparent</a>
     <p><strong>Description :</strong> Utilisez la balise <code>&lt;a&gt;</code> avec la classe <code>msig-button-member-top</code> pour créer un bouton avec un fond transparent et une couleur de texte par défaut. L'effet de survol ne change pas la couleur.</p>
-
+    </div>
 </div>
 
 </body>
