--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--   github live access = https://msig-tech.github.io/msig-w3-css/demo.html   -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
