--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
     <title>MSIG Styles Guide</title>
 </head>
 <body>
-<div class="w3-section msig-center">
+<div id="nothing" class="w3-section msig-center">
     <h1 id="quick-access-menu">msig.css utilisation</h1>
 </div>
 
