--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
     <title>MSIG Styles Guide</title>
 </head>
 <body>
-<div id="nothing" class="w3-section msig-center">
+<div class="w3-section msig-center">
     <h1 id="quick-access-menu">msig.css utilisation</h1>
 </div>
 
@@ -36,6 +36,7 @@
                 <li><a href="#padding" class="msig-url-clean">Padding</a></li>
 
             </ul>
+            <li><a href="#link" class="msig-url-clean">Link</a></li>
         </ul>
     </div>
 </div>
@@ -78,7 +79,7 @@
             </ul>
             <strong>Actual Code :</strong> <code>&lt;a href="#"&gt;&lt;button class="msig-button msig-button-blue msig-button-blue-hover"&gt;Blue Button&lt;/button&gt;&lt;/a&gt;</code>
             <br>
-            <strong>Result :</strong> <a href="#"><button class="msig-button msig-button-blue msig-button-blue-hover">Blue Button</button></a>
+            <strong>Result :</strong> <a href="#blue-button"><button class="msig-button msig-button-blue msig-button-blue-hover">Blue Button</button></a>
         </p>
 
         <hr class="msig-hr">
@@ -94,7 +95,7 @@
             </ul>
             <strong>Actual Code :</strong> <code>&lt;a href="#"&gt;&lt;button class="msig-button msig-button-gold msig-button-gold-hover"&gt;gold Button&lt;/button&gt;&lt;/a&gt;</code>
             <br>
-            <strong>Result :</strong> <a href="#"><button class="msig-button msig-button-gold msig-button-gold-hover">Gold Button</button></a>
+            <strong>Result :</strong> <a href="#gold-button"><button class="msig-button msig-button-gold msig-button-gold-hover">Gold Button</button></a>
         </p>
 
         <hr class="msig-hr">
@@ -110,7 +111,7 @@
             </ul>
             <strong>Actual Code :</strong> <code>&lt;a href="#"&gt;&lt;button class="msig-button msig-button-green msig-button-green-hover"&gt;green Button&lt;/button&gt;&lt;/a&gt;</code>
             <br>
-            <strong>Result :</strong> <a href="#"><button class="msig-button msig-button-green msig-button-green-hover">Green Button</button></a>
+            <strong>Result :</strong> <a href="#green-button"><button class="msig-button msig-button-green msig-button-green-hover">Green Button</button></a>
         </p>
 
         <hr class="msig-hr">
@@ -265,6 +266,23 @@
             </p>
         </div>
 
+    </div>
+
+</div>
+
+<div class="w3-section">
+    <h6 class="msig-center"><a href="#quick-access-menu" class="msig-bottom-copyright msig-url-clean">Back to Quick Access Menu</a></h6>
+</div>
+
+<div id="align-margin-and-padding" class="w3-section msig-card msig-margin-side">
+    <div class="msig-margin-side msig-padding-top-down">    
+        <h2 id="link" class="msig-center">Link</h2>
+        <p>
+            <a id="normal-link" href="#link">Normal link</a><br>
+            <a id="msig-url-clean" class="msig-url-clean" href="#link">URL Clean link</a><br>
+            <a id="msig-url-gold" class="msig-url-gold msig-url-gold-hover" href="#link">URL Gold link</a><br>
+        </p>
+  
     </div>
 
 </div>
