add col center option

--- a/demo.html
+++ b/demo.html
@@ -282,14 +282,46 @@
             <a id="msig-url-clean" class="msig-url-clean" href="#link">URL Clean link</a><br>
             <a id="msig-url-gold" class="msig-url-gold msig-url-gold-hover" href="#link">URL Gold link</a><br>
         </p>
-  
     </div>
-
 </div>
 
 <div class="w3-section">
     <h6 class="msig-center"><a href="#quick-access-menu" class="msig-bottom-copyright msig-url-clean">Back to Quick Access Menu</a></h6>
 </div>
+
+<div id="form-styles" class="w3-section msig-card msig-margin-side">
+    <div class="msig-margin-side msig-padding-top-down">    
+        <h2 id="form-title" class="msig-center">Form</h2>
+
+        <div class="w3-row">
+            <div class="msig-col-center s3"></div>
+            <div class="msig-col-center s6 msig-center">
+                <label for="text-input">Text Input:</label>
+                <input id="text-input" class="msig-input" type="text" placeholder="Entrez du texte">
+            </div>
+            <div class="msig-col-center s3"></div>
+        </div>
+        
+        <div class="msig-padding-top-down"></div>
+        
+        <div class="w3-row">
+            <div class="msig-col-center s6 msig-center">
+                <label for="dropdown">Dropdown:</label>
+                <select id="dropdown" class="msig-input-dropdown">
+                    <option value="option1">Option 1</option>
+                    <option value="option2">Option 2</option>
+                    <option value="option3">Option 3</option>
+                </select>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="w3-section">
+    <h6 class="msig-center"><a href="#quick-access-menu" class="msig-bottom-copyright msig-url-clean">Back to Quick Access Menu</a></h6>
+</div>
+
 
 </body>
 </html>
