--- a/demo.html
+++ b/demo.html
@@ -297,7 +297,7 @@
             <div class="msig-col-center s3"></div>
             <div class="msig-col-center s6 msig-center">
                 <label for="text-input">Text Input:</label>
-                <input id="text-input" class="msig-input" type="text" placeholder="Entrez du texte">
+                <input id="text-input" class="msig-input" type="text" placeholder="Enter your text">
             </div>
             <div class="msig-col-center s3"></div>
         </div>
