--- a/demo.html
+++ b/demo.html
@@ -37,6 +37,7 @@
 
             </ul>
             <li><a href="#link" class="msig-url-clean">Link</a></li>
+            <li><a href="#form" class="msig-url-clean">Form</a></li>
         </ul>
     </div>
 </div>
@@ -282,6 +283,12 @@
             <a id="msig-url-clean" class="msig-url-clean" href="#link">URL Clean link</a><br>
             <a id="msig-url-gold" class="msig-url-gold msig-url-gold-hover" href="#link">URL Gold link</a><br>
         </p>
+        <code>
+            <b>Actual Code :</b><br>
+            &lt;a href="#"&gt;Normal link&lt;/a&gt;&lt;br&gt;<br>
+            &lt;a class="msig-url-clean" href="#"&gt;URL Clean link&lt;/a&gt;&lt;br&gt;<br>
+            &lt;a class="msig-url-gold msig-url-gold-hover" href="#"&gt;URL Gold link&lt;/a&gt;&lt;br&gt;<br>
+        </code>
     </div>
 </div>
 
@@ -289,23 +296,27 @@
     <h6 class="msig-center"><a href="#quick-access-menu" class="msig-bottom-copyright msig-url-clean">Back to Quick Access Menu</a></h6>
 </div>
 
-<div id="form-styles" class="w3-section msig-card msig-margin-side">
-    <div class="msig-margin-side msig-padding-top-down">    
-        <h2 id="form-title" class="msig-center">Form</h2>
+<div id="form" class="w3-section msig-card msig-margin-side w3-center">
+    <div class="w3-container msig-margin-side msig-padding-top-down">    
+        <h2 class="msig-center">Form</h2>
 
-        <div class="w3-row">
-            <div class="msig-col-center s3"></div>
-            <div class="msig-col-center s6 msig-center">
+        <div class="w3-row w3-center">
+            <div class="w3-col w3-third">&nbsp;</div>
+
+            <div class="w3-col w3-third">
                 <label for="text-input">Text Input:</label>
                 <input id="text-input" class="msig-input" type="text" placeholder="Enter your text">
             </div>
-            <div class="msig-col-center s3"></div>
+
+            <div class="w3-col w3-third">&nbsp;</div>
         </div>
         
         <div class="msig-padding-top-down"></div>
         
         <div class="w3-row">
-            <div class="msig-col-center s6 msig-center">
+            <div class="w3-col w3-third">&nbsp;</div>
+
+            <div class="w3-col w3-third">
                 <label for="dropdown">Dropdown:</label>
                 <select id="dropdown" class="msig-input-dropdown">
                     <option value="option1">Option 1</option>
@@ -313,10 +324,29 @@
                     <option value="option3">Option 3</option>
                 </select>
             </div>
+
+            <div class="w3-col w3-third">&nbsp;</div>
         </div>
 
+        <p class="msig-left-align">
+        <b>Actual Code :</b><br>
+            <code class="msig-code">
+                &lt;label for="text-input"&gt;Text Input:&lt;/label&gt;<br>
+                &lt;input id="text-input" class="msig-input" type="text" placeholder="Enter your text"&gt;<br>
+            </code>
+            <code>
+                &lt;label for="dropdown"&gt;Dropdown:&lt;/label&gt;<br>
+                &lt;select id="dropdown" class="msig-input-dropdown"&gt;<br>
+                    &lt;option value="option1"&gt;Option 1&lt;/option&gt;<br>
+                    &lt;option value="option2"&gt;Option 2&lt;/option&gt;<br>
+                    &lt;option value="option3"&gt;Option 3&lt;/option&gt;<br>
+                </select>
+            </code>
+        </p>
     </div>
 </div>
+
+
 
 <div class="w3-section">
     <h6 class="msig-center"><a href="#quick-access-menu" class="msig-bottom-copyright msig-url-clean">Back to Quick Access Menu</a></h6>
