--- a/demo.html
+++ b/demo.html
@@ -328,18 +328,20 @@
             <div class="w3-col w3-third">&nbsp;</div>
         </div>
 
-        <p class="msig-left-align">
+        <p class="msig-left-align msig-code">
         <b>Actual Code :</b><br>
-            <code class="msig-code">
+            <code>
                 &lt;label for="text-input"&gt;Text Input:&lt;/label&gt;<br>
-                &lt;input id="text-input" class="msig-input" type="text" placeholder="Enter your text"&gt;<br>
+                &lt;input id="text-input" class="msig-input" type="text" placeholder="Enter your text"&gt;
             </code>
+        </p>
+        <p class="msig-left-align msig-code">
             <code>
                 &lt;label for="dropdown"&gt;Dropdown:&lt;/label&gt;<br>
                 &lt;select id="dropdown" class="msig-input-dropdown"&gt;<br>
                     &lt;option value="option1"&gt;Option 1&lt;/option&gt;<br>
                     &lt;option value="option2"&gt;Option 2&lt;/option&gt;<br>
-                    &lt;option value="option3"&gt;Option 3&lt;/option&gt;<br>
+                    &lt;option value="option3"&gt;Option 3&lt;/option&gt;
                 </select>
             </code>
         </p>
