--- a/demo.html
+++ b/demo.html
@@ -328,7 +328,7 @@
             <div class="w3-col w3-third">&nbsp;</div>
         </div>
 
-        <p class="msig-left-align msig-code">
+        <p class="msig-left-align w3-code">
         <b>Actual Code :</b><br>
             <code>
                 &lt;label for="text-input"&gt;Text Input:&lt;/label&gt;<br>
@@ -341,8 +341,8 @@
                 &lt;select id="dropdown" class="msig-input-dropdown"&gt;<br>
                     &lt;option value="option1"&gt;Option 1&lt;/option&gt;<br>
                     &lt;option value="option2"&gt;Option 2&lt;/option&gt;<br>
-                    &lt;option value="option3"&gt;Option 3&lt;/option&gt;
-                </select>
+                    &lt;option value="option3"&gt;Option 3&lt;/option&gt;<br>
+                    &lt;/select&gt;
             </code>
         </p>
     </div>
