done for tonight

--- a/demo.html
+++ b/demo.html
@@ -327,9 +327,11 @@
 
             <div class="w3-col w3-third">&nbsp;</div>
         </div>
-
-        <p class="msig-left-align w3-code">
-        <b>Actual Code :</b><br>
+        
+        <p class="msig-left-align">
+            <b>Actual Code :</b>
+        </p>
+        <p class="msig-left-align msig-code">
             <code>
                 &lt;label for="text-input"&gt;Text Input:&lt;/label&gt;<br>
                 &lt;input id="text-input" class="msig-input" type="text" placeholder="Enter your text"&gt;
