update code style in demo.html

--- a/demo.html
+++ b/demo.html
@@ -53,9 +53,12 @@
         </div>
             <p>
                 You need to add this line on the header section of main/all html files :<br>
-                <code>&lt;link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/msig-tech/msig-w3-css/msig.css"&gt;<br>
-                &lt;link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum Gothic|Old Standard TT|Suez One|IM Fell English SC"&gt;    
-                </code>
+                <p class="msig-left-align msig-code">
+                    <code>
+                        &lt;link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/msig-tech/msig-w3-css/msig.css"&gt;<br>
+                        &lt;link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum Gothic|Old Standard TT|Suez One|IM Fell English SC"&gt;    
+                    </code>
+                </p>
             </p>
     </div>
 </div>
@@ -78,8 +81,12 @@
                 <li>msig-button-blue : add blue button color</li>
                 <li>msig-button-blue-hover : add blue mouse over button color</li>
             </ul>
-            <strong>Actual Code :</strong> <code>&lt;a href="#"&gt;&lt;button class="msig-button msig-button-blue msig-button-blue-hover"&gt;Blue Button&lt;/button&gt;&lt;/a&gt;</code>
-            <br>
+            <strong>Actual Code :</strong>
+            <p class="msig-left-align msig-code">
+                <code>
+                    &lt;a href="#"&gt;&lt;button class="msig-button msig-button-blue msig-button-blue-hover"&gt;Blue Button&lt;/button&gt;&lt;/a&gt;
+                </code>
+            </p>
             <strong>Result :</strong> <a href="#blue-button"><button class="msig-button msig-button-blue msig-button-blue-hover">Blue Button</button></a>
         </p>
 
@@ -94,8 +101,12 @@
                 <li>msig-button-gold : add gold button color</li>
                 <li>msig-button-gold-hover : add gold mouse over button color</li>
             </ul>
-            <strong>Actual Code :</strong> <code>&lt;a href="#"&gt;&lt;button class="msig-button msig-button-gold msig-button-gold-hover"&gt;gold Button&lt;/button&gt;&lt;/a&gt;</code>
-            <br>
+            <strong>Actual Code :</strong>
+            <p class="msig-left-align msig-code">
+                <code>
+                    &lt;a href="#"&gt;&lt;button class="msig-button msig-button-gold msig-button-gold-hover"&gt;gold Button&lt;/button&gt;&lt;/a&gt;
+                </code>
+            </p>
             <strong>Result :</strong> <a href="#gold-button"><button class="msig-button msig-button-gold msig-button-gold-hover">Gold Button</button></a>
         </p>
 
@@ -110,8 +121,12 @@
                 <li>msig-button-green : add green button color</li>
                 <li>msig-button-green-hover : add green mouse over button color</li>
             </ul>
-            <strong>Actual Code :</strong> <code>&lt;a href="#"&gt;&lt;button class="msig-button msig-button-green msig-button-green-hover"&gt;green Button&lt;/button&gt;&lt;/a&gt;</code>
-            <br>
+            <strong>Actual Code :</strong>
+            <p class="msig-left-align msig-code">
+                <code>
+                    &lt;a href="#"&gt;&lt;button class="msig-button msig-button-green msig-button-green-hover"&gt;green Button&lt;/button&gt;&lt;/a&gt;
+                </code>
+            </p>
             <strong>Result :</strong> <a href="#green-button"><button class="msig-button msig-button-green msig-button-green-hover">Green Button</button></a>
         </p>
 
@@ -157,14 +172,16 @@
                     This text are at left.<br>
                 </p>
                 <p>
-                    <b>Actual Code :</b><br>
-                    <code>
-                        &lt;div class="msig-left-align"&gt;<br>
-                        &lt;p&gt;<br>
-                        This text are at left.&lt;br&gt;<br>
-                        This text are at left.&lt;br&gt;<br>
-                        &lt;/p&gt;
-                    </code>
+                    <b>Actual Code :</b>
+                    <p class="msig-code">
+                        <code>
+                            &lt;div class="msig-left-align"&gt;<br>
+                            &lt;p&gt;<br>
+                            This text are at left.&lt;br&gt;<br>
+                            This text are at left.&lt;br&gt;<br>
+                            &lt;/p&gt;
+                        </code>
+                    </p>
                 </p>
             </div>
 
@@ -174,14 +191,16 @@
                     This text are at right.<br>
                 </p>
                 <p>
-                    <b>Actual Code :</b><br>
-                    <code>
-                        &lt;div class="msig-right-align"&gt;<br>
-                        &lt;p&gt;<br>
-                        This text are at right.&lt;br&gt;<br>
-                        This text are at right.&lt;br&gt;<br>
-                        &lt;/p&gt;
-                    </code>
+                    <b>Actual Code :</b>
+                    <p class="msig-code">
+                        <code>
+                            &lt;div class="msig-right-align"&gt;<br>
+                            &lt;p&gt;<br>
+                            This text are at right.&lt;br&gt;<br>
+                            This text are at right.&lt;br&gt;<br>
+                            &lt;/p&gt;
+                        </code>
+                    </p>
                 </p>
             </div>
 
@@ -191,14 +210,16 @@
                     This text are centered.<br>
                 </p>
                 <p>
-                    <b>Actual Code :</b><br>
-                    <code>
-                        &lt;div class="msig-right-align"&gt;<br>
-                        &lt;p&gt;<br>
-                        This text are centered.&lt;br&gt;<br>
-                        This text are centered.&lt;br&gt;<br>
-                        &lt;/p&gt;
-                    </code>
+                    <b>Actual Code :</b>
+                    <p class="msig-code">
+                        <code>
+                            &lt;div class="msig-right-align"&gt;<br>
+                            &lt;p&gt;<br>
+                            This text are centered.&lt;br&gt;<br>
+                            This text are centered.&lt;br&gt;<br>
+                            &lt;/p&gt;
+                        </code>
+                    </p>
                 </p>
             </div>           
 
@@ -211,12 +232,14 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ipsum turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus lobortis aliquet diam, quis dapibus dolor dapibus efficitur. Fusce diam justo, pellentesque in lacus nec, gravida tincidunt sem. Donec rhoncus, nibh quis vehicula elementum, metus dui sagittis quam, at maximus risus risus ac felis. Donec auctor magna dui, eget vestibulum purus condimentum non. Etiam orci mauris, volutpat ac pulvinar at, consectetur in metus. Sed ac lobortis nisi, in rutrum ex. Donec quis lectus consectetur, commodo tortor id, bibendum dolor. Fusce in elit nisi. Phasellus in tincidunt nunc. 
             </p>
             <p class="msig-margin-side">
-                <b>Actual Code :</b><br>
-                <code>
-                &lt;p class="msig-justify"&gt;<br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ipsum turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus lobortis aliquet diam, quis dapibus dolor dapibus efficitur. Fusce diam justo, pellentesque in lacus nec, gravida tincidunt sem. Donec rhoncus, nibh quis vehicula elementum, metus dui sagittis quam, at maximus risus risus ac felis. Donec auctor magna dui, eget vestibulum purus condimentum non. Etiam orci mauris, volutpat ac pulvinar at, consectetur in metus. Sed ac lobortis nisi, in rutrum ex. Donec quis lectus consectetur, commodo tortor id, bibendum dolor. Fusce in elit nisi. Phasellus in tincidunt nunc.<br>
-                &lt;/p&gt;
-                </code>
+                <b>Actual Code :</b>
+                <p class="msig-left-align msig-code">
+                    <code>
+                    &lt;p class="msig-justify"&gt;<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ipsum turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus lobortis aliquet diam, quis dapibus dolor dapibus efficitur. Fusce diam justo, pellentesque in lacus nec, gravida tincidunt sem. Donec rhoncus, nibh quis vehicula elementum, metus dui sagittis quam, at maximus risus risus ac felis. Donec auctor magna dui, eget vestibulum purus condimentum non. Etiam orci mauris, volutpat ac pulvinar at, consectetur in metus. Sed ac lobortis nisi, in rutrum ex. Donec quis lectus consectetur, commodo tortor id, bibendum dolor. Fusce in elit nisi. Phasellus in tincidunt nunc.<br>
+                    &lt;/p&gt;
+                    </code>
+                </p>
             </p>
         </div>
 
@@ -283,12 +306,17 @@
             <a id="msig-url-clean" class="msig-url-clean" href="#link">URL Clean link</a><br>
             <a id="msig-url-gold" class="msig-url-gold msig-url-gold-hover" href="#link">URL Gold link</a><br>
         </p>
-        <code>
-            <b>Actual Code :</b><br>
-            &lt;a href="#"&gt;Normal link&lt;/a&gt;&lt;br&gt;<br>
-            &lt;a class="msig-url-clean" href="#"&gt;URL Clean link&lt;/a&gt;&lt;br&gt;<br>
-            &lt;a class="msig-url-gold msig-url-gold-hover" href="#"&gt;URL Gold link&lt;/a&gt;&lt;br&gt;<br>
-        </code>
+
+        <p class="msig-left-align">
+            <b>Actual Code :</b>
+        </p>
+        <p class="msig-left-align msig-code">
+            <code>
+                &lt;a href="#"&gt;Normal link&lt;/a&gt;&lt;br&gt;<br>
+                &lt;a class="msig-url-clean" href="#"&gt;URL Clean link&lt;/a&gt;&lt;br&gt;<br>
+                &lt;a class="msig-url-gold msig-url-gold-hover" href="#"&gt;URL Gold link&lt;/a&gt;&lt;br&gt;<br>
+            </code>
+        </p>
     </div>
 </div>
 
